--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "typescript": "tsc --project tsconfig.json --noEmit",
     "lint-staged": "lint-staged --config lint-staged.js",
-    "husky-install": "husky install"
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -46,5 +46,8 @@
     "lint-staged": "^13.1.0",
     "prettier": "2.8.1",
     "tsc-files": "^1.1.3"
+  },
+  "engines": {
+    "node": ">=16 <17"
   }
 }
