--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -23,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "typescript": "tsc --project tsconfig.json --noEmit",
     "lint-staged": "lint-staged --config lint-staged.js",
@@ -42,10 +39,17 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.1",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
     "prettier": "2.8.1",
+    "ts-jest": "^29.0.5",
     "tsc-files": "^1.1.3"
   },
   "engines": {
