--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@greatsumini/react-facebook-login": "^3.3.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -54,5 +56,8 @@
   },
   "engines": {
     "node": ">=18 <19"
+  },
+  "resolutions": {
+    "react-devtools-core": "4.27.1"
   }
 }
