--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@greatsumini/react-facebook-login": "^3.3.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@react-oauth/google": "^0.7.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
