Fix: lint-staged config file fixes to run eslint and prettier on precommit hook (#7)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "jest",
     "eject": "react-scripts eject",
     "typescript": "tsc --project tsconfig.json --noEmit",
-    "lint-staged": "lint-staged --config lint-staged.js",
+    "lint-staged": "lint-staged --config lint-staged.config.js",
     "prepare": "husky install"
   },
   "browserslist": {
