--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,15 @@
 {
   "extends": ["react-app", "react-app/jest", "prettier"],
-  "rules": {
-    "testing-library/prefer-screen-queries": "off"
-  }  
+  "plugins": ["react", "simple-import-sort"],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "rules": {
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "@typescript-eslint/consistent-type-imports": "error",
+        "testing-library/prefer-screen-queries": "off"
+      }
+    }
+  ]
 }
