--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject",
     "typescript": "tsc --project tsconfig.json --noEmit",
     "lint-staged": "lint-staged --config lint-staged.config.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write .",
+    "validate": "pnpm run lint && pnpm run test && pnpm run build"
   },
   "browserslist": {
     "production": [
@@ -44,13 +47,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
-    "babel-jest": "^29.4.1",
+    "babel-jest": "^29.5.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
+    "jest-emotion": "^11.0.0",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
     "prettier": "2.8.1",
