--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "husky install",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
-    "validate": "pnpm run lint && pnpm run test && pnpm run build"
+    "validate": "npm run lint && npm run test && npm run build"
   },
   "browserslist": {
     "production": [
