feat: use clean arch and atomic design file structure (#14)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@greatsumini/react-facebook-login": "^3.3.1",
@@ -24,10 +25,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
+    "eject": "craco eject",
     "test": "jest --coverage",
-    "eject": "react-scripts eject",
     "typescript": "tsc --project tsconfig.json --noEmit",
     "lint-staged": "lint-staged --config lint-staged.config.js",
     "prepare": "husky install",
@@ -56,6 +57,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "babel-jest": "^29.5.0",
+    "craco-alias": "^3.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
