--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "jwt-decode": "^3.1.2",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -56,6 +57,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
+    "@types/ramda": "^0.29.2",
     "babel-jest": "^29.5.0",
     "craco-alias": "^3.0.1",
     "eslint-config-prettier": "^8.6.0",
