--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.43.9",
     "react-number-format": "^5.2.1",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +54,8 @@
     "@babel/preset-env": "^7.21.4",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@swc/core": "^1.3.66",
+    "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
