--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.11.3",
     "@react-oauth/google": "^0.7.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tomtom-international/web-sdk-maps": "^6.23.0",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
